// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Tests Snapshot Tests renders correctly accessibility props 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={true}
    className="monday-style-avatar_circle monday-style-avatar_circle--text monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={-1}
  >
    <span
      aria-label=""
      className="monday-style-avatar_text"
    />
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly an icon 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={true}
    className="monday-style-avatar_circle monday-style-avatar_circle--text monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={-1}
  >
    <div
      data-testid="icon-mock"
    />
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly square avatar 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={false}
    className="monday-style-avatar_circle monday-style-avatar_circle--text monday-style-avatar_circle--large monday-style-avatar_circle--is-square"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      aria-label=""
      className="monday-style-avatar_text"
    />
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly with badges 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={true}
    className="monday-style-avatar_circle monday-style-avatar_circle--text monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={-1}
  >
    <span
      aria-label=""
      className="monday-style-avatar_text"
    />
  </div>
  <div
    className="monday-style-avatar_badges"
  >
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--top-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--top-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--bottom-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--bottom-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly with damaged src badges 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={true}
    className="monday-style-avatar_circle monday-style-avatar_circle--text monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={-1}
  >
    <span
      aria-label=""
      className="monday-style-avatar_text"
    />
  </div>
  <div
    className="monday-style-avatar_badges"
  >
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--top-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--top-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--bottom-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="monday-style-avatar_badge monday-style-avatar_badge--bottom-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly with empty props 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={false}
    className="monday-style-avatar_circle monday-style-avatar_circle--text monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      aria-label=""
      className="monday-style-avatar_text"
    />
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly with image 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={false}
    className="monday-style-avatar_circle monday-style-avatar_circle--img monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <img
      alt=""
      className="monday-style-avatar_image"
      src="https://files.monday.com/use1/photos/16447897/small/16447897-Hadas_Farhi_photo_2020_10_04_10_14_06.png?1601806446"
    />
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly with image and text 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={false}
    className="monday-style-avatar_circle monday-style-avatar_circle--img monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <img
      alt=""
      className="monday-style-avatar_image"
      src="https://files.monday.com/use1/photos/16447897/small/16447897-Hadas_Farhi_photo_2020_10_04_10_14_06.png?1601806446"
    />
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly with not valid image 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={false}
    className="monday-style-avatar_circle monday-style-avatar_circle--img monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <img
      alt=""
      className="monday-style-avatar_image"
      src="not valid src"
    />
  </div>
</div>
`;

exports[`Avatar Tests Snapshot Tests renders correctly with text 1`] = `
<div
  className="monday-style-avatar"
>
  <div
    aria-hidden={false}
    className="monday-style-avatar_circle monday-style-avatar_circle--text monday-style-avatar_circle--large"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      aria-label=""
      className="monday-style-avatar_text"
    />
  </div>
</div>
`;
